Implemented tasks P1 priority